tests/baselines/reference/parserES5ComputedPropertyName3.errors.txt
parserES5ComputedPropertyName3.ts(1,12): error TS2304: Cannot find name 'e'.


==== parserES5ComputedPropertyName3.ts (1 errors) ====
    var v = { [e]() { } };
               ~
!!! error TS2304: Cannot find name 'e'.